--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,12 @@ name: CI
   push:
     branches:
       - main
+  workflow_call:
+    inputs:
+      gems:
+        required: false
+        type: string
+        default: "envkey"
 
 jobs:
   cookstyle:
