fix ci.yml depends

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
   integration:
     needs:
       - cookstyle
-      - mdl
+      - markdownlint-cli2
       - yamllint
       - rspec
     runs-on: ubuntu-latest
